All_Component_DX/force-app/main/default/objects/Resource_Preference__c/Resource_Preference__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object is used to manage Mandatory, Preferred or Prohibited Resources (Technicians) on Account, Location and Installed Product.</description>
    <label>Resource Preference</label>
    <nameField>
        <displayFormat>SGMRP-{00000000}</displayFormat>
        <label>Resource Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>