All_Component_DX/force-app/main/default/objects/Resource_Preference__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Resource Preferences</relationshipLabel>
    <relationshipName>Resource_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>