All_Component_DX/force-app/main/default/objects/Resource_Preference__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component</label>
    <referenceTo>Installed_Product__c</referenceTo>
    <relationshipLabel>Resource Preferences</relationshipLabel>
    <relationshipName>Resource_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>