All_Component_DX/force-app/main/default/objects/Resource_Preference__c/fields/Group_Member__c.field-meta.xml
<CustomField>
    <fullName>Group_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Technician who is Preferred, Mandatory or Prohibited</description>
    <inlineHelpText>Select a Technician who is Preferred, Mandatory or Prohibited</inlineHelpText>
    <label>Technician</label>
    <referenceTo>Service_Group_Members__c</referenceTo>
    <relationshipLabel>Resource Preferences</relationshipLabel>
    <relationshipName>Resource_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>