All_Component_DX/force-app/main/default/objects/Resource_Preference__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Resource Preferences</relationshipLabel>
    <relationshipName>Resource_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>