All_Component_DX/force-app/main/default/objects/Resource_Preference__c/recordTypes/Account.recordType-meta.xml
<RecordType>
    <fullName>Account</fullName>
    <active>true</active>
    <description>Technician related to Account</description>
    <label>Account</label>
</RecordType>