All_Component_DX/force-app/main/default/objects/Resource_Preference__c/recordTypes/Installed_Product.recordType-meta.xml
<RecordType>
    <fullName>Installed_Product</fullName>
    <active>true</active>
    <description>Technician related to Installed Product</description>
    <label>Installed Product</label>
</RecordType>