All_Component_DX/force-app/main/default/objects/Resource_Preference__c/recordTypes/Location.recordType-meta.xml
<RecordType>
    <fullName>Location</fullName>
    <active>true</active>
    <description>Technician related to Location</description>
    <label>Location</label>
</RecordType>